// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[presentation] <Link /> when both href and route are undefined matches snapshot 1`] = `
<span
  intl="[object Object]"
>
  Link text
</span>
`;

exports[`[presentation] <Link /> when isExternal is true matches snapshot 1`] = `
<a
  href="/"
  intl="[object Object]"
  rel="noopener"
  target="_blank"
>
  Link text
</a>
`;

exports[`[presentation] <Link /> when the router is available and href is defined matches snapshot 1`] = `
<a
  href="/"
  intl="[object Object]"
>
  Link text
</a>
`;

exports[`[presentation] <Link /> when the router is available and route is defined matches snapshot 1`] = `
<a
  href="/"
  intl="[object Object]"
>
  Link text
</a>
`;

exports[`[presentation] <Link /> when the router is unavailable and href is defined matches snapshot 1`] = `
<a
  href="/"
  intl="[object Object]"
>
  Link text
</a>
`;
